--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,10 @@ img{
 .basketTotal{
     width: 10%;
 }
+.button{
+    justify-content: center;
+    margin-left: 45%;
+}
 button{
     background-color: lightgrey;
     color: black;
